Completed frontend html and css

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,2 +1,48 @@
-<h1>Welcome to CSE Motors!</h1>
-<p>Is this where we write all of the HTML for the home page?</p>
+<h2>Welcome to CSE Motors!</h2>
+<div id="home-tile">
+  <div id="featured-box">
+    <h3>DMC Delorean</h3>
+    <ul>
+      <li>3 Cup Holders</li>
+      <li>Superman Doors</li>
+      <li>Fuzzy Dice!</li>
+    </ul>
+    <a href="" id="call-to-action">Own Today</a>
+  </div>
+  <img src="images/vehicles/delorean.jpg" />
+</div>
+
+<div id="review-section">
+  <h3>DMC Delorean Reviews</h3>
+  <ul>
+    <li>"So fast it's almost like traveling in time." (4/5)</li>
+    <li>"Coolest ride on the road." (4/5)</li>
+    <li>"I'm feeling McFly!" (5/5)</li>
+    <li>"The most futuristic ride of our day." (4.5/5)</li>
+    <li>"80's livin and I love it!" (5/5)</li>
+  </ul>
+</div>
+
+<h3>Delorean Upgrades</h3>
+<div id="upgrade-section">
+  <div class="upgrades">
+    <img src="images/upgrades/flux-cap.png" />
+    <br />
+    <a href="">Flux Capacitor</a>
+  </div>
+  <div class="upgrades">
+    <img src="images/upgrades/flame.jpg" />
+    <br />
+    <a href="">Flame Decals</a>
+  </div>
+  <div class="upgrades">
+    <img src="images/upgrades/bumper_sticker.jpg" />
+    <br />
+    <a href="">Bumper Stickers</a>
+  </div>
+  <div class="upgrades">
+    <img src="images/upgrades/hub-cap.jpg" />
+    <br />
+    <a href="">Hub Caps</a>
+  </div>
+</div>
