--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,196 @@
 *:after {
   box-sizing: border-box;
 }
+
+/************ Fonts ***************/
+body {
+  font-family: 'Open Sans', sans-serif;
+}
+
+h1, h2, h3 {
+  font-family: 'Montserrat', sans-serif;
+}
+
+
+@media screen and (min-width: 768px) {
+  html {
+    background-image: url("../images/site/checkerboard.jpg");
+  }
+}
+
+html,
+body {
+  height: 100%;
+}
+
+/************ Body ***************/
+/* Full screen */
+@media screen and (min-width: 768px) {
+  #wrapper {
+    background-color: white;
+    border: 4px solid rgb(212, 0, 0);
+    border-radius: 5px;
+    font-size: 1em;
+    line-height: 1.5;
+    margin: 20px auto;
+    padding: 0;
+    max-width: 960px;
+  }
+}
+
+/* Mobile */
+@media screen and (max-width: 767px) {
+  #wrapper {
+    background-color: white;
+    font-size: 1em;
+    line-height: 1.3;
+    margin: 0;
+    padding: 2px;
+  }
+}
+
+main {
+  padding: 10px;
+}
+
+footer {
+  clear: both;
+  padding: 10px;
+}
+
+/************ Header ***************/
+header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  background-color: rgb(255, 255, 255) fff;
+  color: #000000;
+}
+
+header a {
+  color: #000000;
+  text-decoration: none;
+}
+
+header #tools {
+  text-transform: uppercase;
+}
+
+/************ Navigation ***************/
+nav {
+  background-color: #333;
+  color: #fff;
+}
+
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  width: 100%;
+}
+
+nav li {
+  padding: 10px;
+}
+
+nav li:hover {
+  background-color: #555;
+}
+
+nav a {
+  color: #fff;
+  text-decoration: none;
+}
+
+/************ Index Page ***************/
+@media screen and (min-width: 768px) {
+  #upgrade-section {
+    width: 50%;
+    float: left;
+  }
+
+  #review-section {
+    width: 50%;
+    float: right;
+  }
+
+  #review-section h3 {
+    padding-left: 1em;
+  }
+}
+
+#home-tile {
+  position: relative;
+}
+
+#featured-box {
+  position: absolute;
+  top: 50%;
+  left: 10%;
+  transform: translateY(-50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+}
+
+#featured-box h3 {
+  margin-top: 0;
+}
+
+#featured-box ul {
+  list-style: none;
+  padding: 0;
+}
+
+#featured-box li {
+  margin-bottom: 10px;
+}
+
+#call-to-action {
+  display: inline-block;
+  background-color: #fff;
+  color: #333;
+  padding: 10px 20px;
+  text-decoration: none;
+  margin-top: 10px;
+}
+
+#home-tile img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: auto;
+}
+
+#upgrade-section {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-between;
+}
+
+.upgrades {
+  width: calc(50% - 10px);
+  margin-bottom: 20px;
+  background-color: rgb(212, 0, 0);
+}
+
+.upgrades img {
+  display: block;
+  margin: 0 auto;
+  max-width: 100%;
+  height: auto;
+  padding: 8px;
+}
+
+.upgrades a {
+  display: block;
+  padding: 10px;
+  text-align: center;
+  color: #fff;
+  text-decoration: none;
+}
