--- a/views/layouts/partials/header.ejs
+++ b/views/layouts/partials/header.ejs
@@ -1,8 +1,10 @@
 <header id="top-header">
-    <span class="siteName">
-      <a href="/" title="Return to home page">CSE Motors</a>
-    </span>
-    <div id="tools">
-      <a title="Click to log in" href="/account/login">My Account</a>
-    </div>
-  </header>
+  <span class="siteName">
+    <a href="/" title="Return to home page">
+      <h1>CSE Motors</h1>
+    </a>
+  </span>
+  <div id="tools">
+    <a title="Click to log in" href="/account/login">My Account</a>
+  </div>
+</header>
