--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,7 +9,7 @@
     </ul>
     <a href="" id="call-to-action">Own Today</a>
   </div>
-  <img src="images/vehicles/delorean.jpg" />
+  <img src="images/vehicles/delorean.jpg" alt="delorean picture">
 </div>
 
 <div id="review-section">
@@ -26,23 +26,23 @@
 <h3>Delorean Upgrades</h3>
 <div id="upgrade-section">
   <div class="upgrades">
-    <img src="images/upgrades/flux-cap.png" />
-    <br />
+    <img src="images/upgrades/flux-cap.png" alt="flux-cap icon" >
+    <br>
     <a href="">Flux Capacitor</a>
   </div>
   <div class="upgrades">
-    <img src="images/upgrades/flame.jpg" />
-    <br />
+    <img src="images/upgrades/flame.jpg" alt="flame icon">
+    <br>
     <a href="">Flame Decals</a>
   </div>
   <div class="upgrades">
-    <img src="images/upgrades/bumper_sticker.jpg" />
-    <br />
+    <img src="images/upgrades/bumper_sticker.jpg" alt="bumper sticker icon">
+    <br>
     <a href="">Bumper Stickers</a>
   </div>
   <div class="upgrades">
-    <img src="images/upgrades/hub-cap.jpg" />
-    <br />
+    <img src="images/upgrades/hub-cap.jpg" alt="hub cap icon">
+    <br>
     <a href="">Hub Caps</a>
   </div>
 </div>
