--- a/views/layouts/partials/navigation.ejs
+++ b/views/layouts/partials/navigation.ejs
@@ -1,9 +1,9 @@
 <nav>
     <ul>
-        <a href=""><li>Home</li></a>
-        <a href=""><li>Custom</li></a>
-        <a href=""><li>Sedan</li></a>
-        <a href=""><li>SUV</li></a>
-        <a href=""><li>Truck</li></a>
+        <li><a href="">Home</a></li>
+        <li><a href="">Custom</a></li>
+        <li><a href="">Sedan</a></li>
+        <li><a href="">SUV</a></li>
+        <li><a href="">Truck</a></li>
     </ul>
 </nav>
