--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -67,13 +67,23 @@ header {
   justify-content: space-between;
   align-items: center;
   padding: 20px;
-  background-color: rgb(255, 255, 255) fff;
+  background-color: rgb(255, 255, 255);
   color: #000000;
 }
 
 header a {
   color: #000000;
   text-decoration: none;
+}
+
+header .siteName {
+  display: block;
+  font-size: 2em;
+  margin-top: 0.67em;
+  margin-bottom: 0.67em;
+  margin-left: 0;
+  margin-right: 0;
+  font-weight: bold;
 }
 
 header #tools {
