--- a/views/layouts/partials/head.ejs
+++ b/views/layouts/partials/head.ejs
@@ -5,5 +5,6 @@
     <title><%- title %> | CSE 340 App</title>
     <link rel="stylesheet" href="/css/styles.css">
     <link rel="icon" type="image/png" href="images/site/favicon-32x32.png">
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans|Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 </head>
