--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -7,13 +7,14 @@
 
 /************ Fonts ***************/
 body {
-  font-family: 'Open Sans', sans-serif;
+  font-family: "Open Sans", sans-serif;
 }
 
-h1, h2, h3 {
-  font-family: 'Montserrat', sans-serif;
+h1,
+h2,
+h3 {
+  font-family: "Montserrat", sans-serif;
 }
-
 
 @media screen and (min-width: 768px) {
   html {
@@ -24,6 +25,7 @@ h1, h2, h3 {
 html,
 body {
   height: 100%;
+  margin: 0;
 }
 
 /************ Body ***************/
@@ -35,7 +37,7 @@ body {
     border-radius: 5px;
     font-size: 1em;
     line-height: 1.5;
-    margin: 20px auto;
+    margin: 0px auto;
     padding: 0;
     max-width: 960px;
   }
@@ -45,10 +47,11 @@ body {
 @media screen and (max-width: 767px) {
   #wrapper {
     background-color: white;
-    font-size: 1em;
+    font-size: 1.2em;
     line-height: 1.3;
     margin: 0;
-    padding: 2px;
+    padding: 0;
+    max-width: 100%;
   }
 }
 
@@ -88,25 +91,32 @@ nav {
 
 nav ul {
   list-style: none;
-  margin: 0;
+  margin: auto;
   padding: 0;
   display: flex;
   justify-content: space-around;
   align-items: center;
-  width: 100%;
+  width: 0%;
 }
 
 nav li {
-  padding: 10px;
+  padding: 11px 0px;
 }
 
-nav li:hover {
+nav a:hover {
   background-color: #555;
 }
 
 nav a {
   color: #fff;
   text-decoration: none;
+  padding: 10px;
+}
+
+@media screen and (min-width: 768px) {
+  nav a {
+    padding: 10px 30px;
+  }
 }
 
 /************ Index Page ***************/
@@ -196,4 +206,77 @@ nav a {
   text-align: center;
   color: #fff;
   text-decoration: none;
+}
+
+/************ Inventory Classification Page ***************/
+
+#inv-display {
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+  margin: auto;
+  justify-content: center;
+}
+
+#inv-display li {
+  border: 0px solid #333;
+  border-radius: 5px;
+  margin: 1em;
+  max-width: 200px;
+  min-width: 200px;
+  overflow: hidden;
+  box-shadow: 2px 2px 6px #33333380;
+  flex-basis: 33.333333%;
+}
+
+#inv-display img {
+  object-fit: cover;
+  border-bottom: 5px solid #333;
+}
+
+#inv-display hr {
+  display: none;
+}
+
+#inv-display .namePrice {
+  padding: 0;
+  margin: 0 4px;
+}
+
+#inv-display h2 {
+  max-width: 200px;
+  margin: 0;
+}
+
+#inv-display .namePrice a {
+  text-decoration: none;
+}
+
+/************ Inventory Detail ***************/
+
+@media screen and (min-width: 768px) {
+  #detail-display {
+    display: flex;
+    flex-wrap: wrap;
+    margin: auto;
+    justify-content: center;
+  }
+
+  #detail-display hr {
+    display: none;
+  }
+
+  #detail-display-info {
+    flex-basis: 28%;
+    margin-left: 0.5em;
+  }
+}
+
+#detail-display-info h2 {
+  margin: 0.5em 0;
+}
+
+#detail-display-info ul {
+  list-style: none;
+  padding: 0;
 }
