--- a/views/layouts/partials/footer.ejs
+++ b/views/layouts/partials/footer.ejs
@@ -2,4 +2,5 @@
 let year = d.getFullYear() %>
 <footer>
   <p class="copyright">&copy;<%= year %>, CSE 340 App</p>
+  <p><a href="http://localhost:5500/inv/type/6">Error Link</a></p>
 </footer>
