--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -110,7 +110,7 @@ nav a:hover {
 nav a {
   color: #fff;
   text-decoration: none;
-  padding: 10px;
+  padding: 8px;
   width: max-content;
   margin: auto;
   width: 100%;
@@ -121,7 +121,7 @@ nav a {
 
 @media screen and (min-width: 768px) {
   nav a {
-    padding: 10px 30px;
+    padding: 10px;
   }
 
   nav ul {
@@ -291,10 +291,6 @@ nav a {
   box-shadow: 2px 2px 6px #33333380;
 }
 
-#detail-display-image {
-  text-align: center;
-}
-
 #detail-display-info h2 {
   margin: 0.5em 0;
 }
@@ -328,6 +324,13 @@ input[type="submit"] {
   cursor: pointer;
   padding: 0.5em;
   margin: 1em 0.25em 0.25em 0;
+}
+
+/* Select styling */
+select {
+  padding: 0.5em;
+  margin: 0 0 1em 0;
+  width: 100%;
 }
 
 /* invalid input */
