Adjusted url for inventory management

--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -9,5 +9,5 @@
 <%- messages() %>
 
 <!-- Vehicle Management Display -->
-<p><a href="add-classification">Add new classification</a></p>
-<p><a href="add-vehicle">Add new vehicle</a></p>
+<p><a href="inv/add-classification">Add new classification</a></p>
+<p><a href="inv/add-vehicle">Add new vehicle</a></p>
