--- a/views/account/login.ejs
+++ b/views/account/login.ejs
@@ -17,7 +17,7 @@
     <br>
     <label for="password">Password:</label>
     <br>
-    <input type="password" name="account_password" id="password" pattern="^(?=.*\d)(?=.*[a-z])(?=.*[A-Z])(?=.*[^a-zA-Z0-9])(?!.*\s).{12,}$" required>
+    <input type="password" name="account_password" id="password" required>
     <br>
     <input type="submit" value="Login">
 </form>
