--- a/views/inventory/management.ejs
+++ b/views/inventory/management.ejs
@@ -9,5 +9,16 @@
 <%- messages() %>
 
 <!-- Vehicle Management Display -->
-<p><a href="inv/add-classification">Add new classification</a></p>
-<p><a href="inv/add-vehicle">Add new vehicle</a></p>
+<p><a href="/inv/add-classification">Add new classification</a></p>
+<p><a href="/inv/add-vehicle">Add new vehicle</a></p>
+
+<h2>Manage Inventory</h2>
+<p>Select a classification from the list to see it's items.</p>
+
+<!-- Classification List Select -->
+<%- classificationSelect %>
+
+<table id="inventoryDisplay"></table>
+
+<noscript>JavaScript must be enabled to use this page.</noscript>
+<script src="../../js/inventory.js"></script>
