--- a/views/layouts/partials/header.ejs
+++ b/views/layouts/partials/header.ejs
@@ -1,6 +1,11 @@
 <header id="top-header">
     <h1 class="siteName"><a href="/" title="Return to home page">CSE Motors</a></h1>
   <div id="tools">
-    <a title="Click to log in" href="/account/login">My Account</a>
+    <% if (loggedin) { %>
+      <span><a href="/account/">Welcome, <%= accountData.account_firstname %>.</a></span>
+      <a title="Click to log out" href="/account/logout">Logout</a>
+    <% } else { %>
+      <a title="Click to log in" href="/account/login">My Account</a>
+    <% } %>
   </div>
 </header>
